# synfig

./: 1-conan-export.ps1  1-conan-export.sh  2-conan-build.ps1  2-conan-build.sh  CMakeLists.txt  conanfile.py
cmake/: SynfigGettext.cmake
conan-recipes/autoconf/all/: conandata.yml
conan-recipes/gtk/all/: conandata.yml  conanfile.py
conan-recipes/gtkmm/all/: conandata.yml  conanfile.py
conan-recipes/gtkmm/all/patches/: enable_static_builds_with_msvc.patch
synfig-core/: CMakeLists.txt
synfig-core/src/: CMakeLists.txt
synfig-core/src/modules/lyr_freetype/: CMakeLists.txt
synfig-core/src/synfig/: CMakeLists.txt  valuenode_registry.h
synfig-core/src/tool/: CMakeLists.txt
synfig-studio/: CMakeLists.txt
synfig-studio/src/: CMakeLists.txt
synfig-studio/src/gui/: CMakeLists.txt  eventkey.h  workarea.cpp
synfig-studio/src/gui/states/: state_normal.cpp  state_smoothmove.cpp
